# qlipq

./: .release-please-manifest.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.changeset/: README.md  spicy-clips-begin.md
.github/actions/setup-ffmpeg/: action.yml
.github/workflows/: build-app.yml  build-desktop.yml  ci.yml  deploy-website.yml  dotnet-desktop.yml  iced-desktop.yml  qlipq-desktop-release.yml  release-please.yml  release-plz.yml  release.yml
apps/app/: index.html  package.json  vite.config.ts
apps/app/src/: App.tsx  styles.css
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: lib.rs
apps/app/src/components/: AudioPanel.tsx  ConfigPanel.tsx  Editor.tsx  QueueList.tsx  RenameModal.tsx  Timeline.tsx
apps/app/src/lib/: api.ts  queue.ts
apps/desktop/: .gitignore  Cargo.toml  README.md  release-plz.toml
apps/desktop-native/: .gitignore
apps/desktop-native/crates/qlipq-iced/: Cargo.toml  build.rs
apps/desktop-native/crates/qlipq-iced/examples/: smoke.rs
apps/desktop-native/crates/qlipq-iced/src/: host.rs  main.rs  theme.rs  video.rs  views.rs
apps/desktop/crates/qlipq-core/: CHANGELOG.md  Cargo.toml
apps/desktop/crates/qlipq-core/src/: config.rs  config_json.rs  datetimes.rs  edit_spec.rs  ids.rs  lib.rs  media.rs  queue.rs  rename.rs
apps/desktop/crates/qlipq-core/tests/: config_tests.rs  detect_tests.rs  obs_tests.rs  rename_tests.rs
apps/desktop/crates/qlipq-desktop/: CHANGELOG.md  Cargo.toml  build.rs
apps/desktop/crates/qlipq-desktop/examples/: encode_probe.rs  hdr_probe.rs  mixdown_probe.rs  play_probe.rs  scrub_probe.rs  scrubgraph_probe.rs  smoke.rs
apps/desktop/crates/qlipq-desktop/src/: export.rs  host.rs  libav.rs  log_ctx.rs  main.rs  seeker.rs  theme.rs  video.rs  views.rs
apps/desktop/crates/qlipq-ffmpeg/: CHANGELOG.md
apps/desktop/crates/qlipq-ffmpeg/src/: args.rs  hw.rs  lib.rs
apps/desktop/crates/qlipq-ffmpeg/tests/: args_tests.rs
apps/desktop/installer/: qlipq.iss
apps/obs-script/: README.md  package.json
apps/obs-script/scripts/: publish.mjs
apps/website/: astro.config.mjs  package.json  wrangler.jsonc
apps/website/src/: content.config.ts
apps/website/src/components/: Footer.astro  Header.astro
apps/website/src/content/guide/: getting-started.md  obs-replay-buffer.md  organize-by-game.md
apps/website/src/pages/: 404.astro  download.astro  index.astro  qlipq-renamer.lua.ts
apps/website/src/pages/guide/: [...slug].astro  getting-started.astro  index.astro  obs-replay-buffer.astro
desktop/: .gitignore  Directory.Build.props  Qlipq.slnx  README.md
desktop/src/Qlipq.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Qlipq.App.csproj  app.manifest
desktop/src/Qlipq.App/Converters/: Converters.cs
desktop/src/Qlipq.App/Services/: DialogService.cs  LibVlcService.cs  PlaybackStore.cs
desktop/src/Qlipq.App/ViewModels/: AppPath.cs  AudioTrackViewModel.cs  ConfigViewModel.cs  Debouncer.cs  EditorViewModel.cs  EnumKeys.cs  IsoTime.cs  QueueItemViewModel.cs  ShellViewModel.cs  StoredEdit.cs
desktop/src/Qlipq.App/Views/: EditorView.xaml  EditorView.xaml.cs  QueueView.xaml  QueueView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
desktop/src/Qlipq.Core/: Config.cs  ConfigJson.cs  DateTimes.cs  Detect.cs  EditSpec.cs  Ids.cs  Json.cs  Media.cs  Obs.cs  Qlipq.Core.csproj  Queue.cs  Rename.cs
desktop/src/Qlipq.Ffmpeg/: Encode.cs  Estimate.cs  ExportArgs.cs  Probe.cs  Progress.cs  Qlipq.Ffmpeg.csproj
desktop/src/Qlipq.Host/: AppPaths.cs  CaptureDetect.cs  FileSystem.cs  FolderWatcher.cs  MediaTasks.cs  ProcessRunner.cs  Qlipq.Host.csproj  Stores.cs
desktop/tests/Qlipq.Core.Tests/: ConfigTests.cs  DetectTests.cs  EditSpecTests.cs  ObsTests.cs  Qlipq.Core.Tests.csproj  RenameTests.cs
desktop/tests/Qlipq.Ffmpeg.Tests/: ArgsTests.cs  EstimateTests.cs  ProbeTests.cs  ProgressTests.cs  Qlipq.Ffmpeg.Tests.csproj
iced/: .gitignore  Cargo.toml  README.md
iced/crates/qlipq-core/: Cargo.toml
iced/crates/qlipq-core/src/: config.rs  config_json.rs  detect.rs  lib.rs  obs.rs
iced/crates/qlipq-core/tests/: config_tests.rs  edit_spec_tests.rs
iced/crates/qlipq-ffmpeg/: Cargo.toml
iced/crates/qlipq-ffmpeg/src/: args.rs  estimate.rs  lib.rs  probe.rs  progress.rs
iced/crates/qlipq-ffmpeg/tests/: args_tests.rs  estimate_tests.rs  probe_tests.rs  progress_tests.rs
iced/crates/qlipq-iced/: Cargo.toml
iced/crates/qlipq-iced/src/: host.rs  iso.rs  main.rs  views.rs
recorder-lua/: README.md  recorder.lua
