[workspace]
resolver = "2"
members = ["crates/qlipq-core", "crates/qlipq-ffmpeg", "crates/qlipq-iced"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
qlipq-core = { path = "crates/qlipq-core" }
qlipq-ffmpeg = { path = "crates/qlipq-ffmpeg" }

[profile.release]
opt-level = 2
