[package]
name = "qlipq-app"
version = "0.0.0"
description = "qlipq — a recording queue and lightweight editor"
authors = ["Tom Alle <tom@tomalle.com>"]
edition = "2021"

[lib]
# The lib is the shared entry point for desktop and mobile.
name = "qlipq_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"

[target."cfg(windows)".dependencies]
winreg = "0.56.0"
