[package]
name = "qlipq-desktop"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "qlipq"
path = "src/main.rs"

# In-process libav preview (decode + libplacebo tonemap + cpal audio). This is the **default** local
# build; it needs a shared FFmpeg dev build wired via .cargo/config.toml. CI and the release builds
# pass `--no-default-features` to get the dependency-light CLI-preview path (no native libav/audio).
[features]
default = ["libav-preview"]
libav-preview = ["dep:rsmpeg", "dep:cpal", "dep:ringbuf"]

[[example]]
name = "smoke"
required-features = ["libav-preview"]

[[example]]
name = "hdr_probe"
required-features = ["libav-preview"]

[[example]]
name = "play_probe"
required-features = ["libav-preview"]

[[example]]
name = "encode_probe"
required-features = ["libav-preview"]

[[example]]
name = "scrub_probe"
required-features = ["libav-preview"]

[[example]]
name = "mixdown_probe"
required-features = ["libav-preview"]

[[example]]
name = "scrubgraph_probe"
required-features = ["libav-preview"]

[dependencies]
qlipq-core = { workspace = true }
qlipq-ffmpeg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
iced = { version = "0.14", features = ["tokio", "image", "wgpu", "advanced"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
notify = "8.2"
dirs = "6"
rfd = "0.17"
open = "5"
# Optional: in-process FFmpeg (libav) for the libplacebo HDR preview + synced audio. Linked against
# a shared FFmpeg 8.x dev build (see .cargo/config.toml). Enabled by the `libav-preview` feature.
rsmpeg = { version = "0.18", default-features = false, features = ["ffmpeg8"], optional = true }
cpal = { version = "0.18.1", optional = true }
ringbuf = { version = "0.5.0", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
